--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 backend/node_modules/
 frontend/node_modules/
 frontend/build/
+frontend/package-lock.json
 backend/dist/
 backend/package-lock.json
 backend/yarn.lock
+frontend/yarn.lock
 backend/public
+docker
