adiciona o Square payment Gatway

--- a/backend/.env
+++ b/backend/.env
@@ -34,3 +34,8 @@ FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 
 VERIFY_TOKEN=whaticket
+
+# Square Payment Gateway
+SQUARE_ACCESS_TOKEN=EAAAl-3tdNNURcXRxzE3a1AbI-4x0O5SjHB5l_NiTsPh2tj_D2-8_YMfcI81DFXx
+SQUARE_ENVIRONMENT=sandbox
+SQUARE_LOCATION_ID=L8MB3KGN1MBDX
