--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-square-web-payments-sdk": "^3.2.4-beta.1",
     "react-text-mask": "^5.5.0",
     "react-toastify": "9.0.0",
     "react-trello": "2.2.11",
